--- a/app/src/main/res/layout/detail_cardview.xml
+++ b/app/src/main/res/layout/detail_cardview.xml
@@ -77,6 +77,13 @@
                     android:layout_marginTop="3dp"
                     android:layout_marginBottom="5dp" />
 
+                <TextView
+                    android:id="@+id/detail_text_8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="5dp" />
+
             </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
