feat: 从教务系统获取上课时间

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,9 @@
     <color name="color_background_green">#06C160</color>
 
     <color name="color_room">#3396D8</color>
-    <color name="color_time">#7F4073</color>
+    <color name="color_day">#7F4073</color>
+    <color name="color_time">#FF5722</color>
+    <color name="color_clock">#4CAF50</color>
 
     <color name="config_color_select_bg">#FFF1F1F1</color>
 </resources>
