--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="color_day">#7F4073</color>
     <color name="color_time">#FF5722</color>
     <color name="color_clock">#4CAF50</color>
+    <color name="color_date">#FB7299</color>
 
     <color name="config_color_select_bg">#FFF1F1F1</color>
 </resources>
