feat: 适配正式考试安排接口

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,6 @@
     <color name="color_time">#FF5722</color>
     <color name="color_clock">#4CAF50</color>
     <color name="color_date">#FB7299</color>
-
+    <color name="color_seat">#E040FB</color>
     <color name="config_color_select_bg">#FFF1F1F1</color>
 </resources>
